--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Date: 2022-10-21
 Authors@R: c(person("Youngseok","Song", email="youngseok.song@epfl.ch", role =c("aut", "cre")), 
             person("Sofia C.","Olhede", email = "sofia.olhede@epfl.ch", role = "aut"))
 Maintainer: Youngseok Song <youngseok.song@epfl.ch>
-Description: R package for network histogram estimation and tools. See the `nethist` website for more information.
+Description: R package for network histogram estimation and additional tools. The package is an RcppArmadillo implementation of the original MATLAB code in Olhede and Wolfe (2014). To install the package from source, you need C++ and Fortran (due to RSpectra) compilers. We suggest you to use undirected and simple graphs (either igraph or matrix) as inputs for the functions in this package.
 License: MIT + file LICENSE
 Suggests: 
     testthat (>= 3.0.0),
