Squashed commit of the following:
commit 316b43e4cca32b9ed97528d068e69c7de13f8df3
Author: Youngseok Song <youngseok.song@epfl.ch>
Date:   Tue Nov 8 14:38:24 2022 +0100

    * Documentation update
    * test code for counting cycles
    * use Rcpp implementation for falling factorial (used in net_summary)

commit 1a97c3dad509ed74b3dec66e7889f43202c4fee9
Author: Youngseok Song <youngseok.song@epfl.ch>
Date:   Fri Nov 4 17:02:10 2022 +0100

    Re-introduce default argument in violin_netsummary.deafult()
    This is because violin_netsummary generates error when R is not specified in violin_netsummary()

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,13 +1,8 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
-<<<<<<< HEAD
-=======
 ^_pkgdown\.yml$
 ^docs$
 ^pkgdown$
-<<<<<<< HEAD
-^\.github$
-=======
 ^README\.Rmd$
->>>>>>> f1a53a0d773a0afac6d1a514eb639e74b20ea748
->>>>>>> 26dc8d3fb67627bd1e6042dbfe78ee6e20b80482
+^reference\.bib$
+^\.github$
