Save the changes (For ver 0.2.0)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,16 @@
 S3method(nethist,dgCMatrix)
 S3method(nethist,igraph)
 S3method(nethist,matrix)
+S3method(nethist_test,dgCMatrix)
+S3method(nethist_test,igraph)
+S3method(nethist_test,matrix)
 S3method(plot,nethist)
 S3method(violin_netsummary,dgCMatrix)
 S3method(violin_netsummary,igraph)
 S3method(violin_netsummary,matrix)
 export(.prob_mat_from_adj)
 export(nethist)
+export(nethist_test)
 export(violin_netsummary)
 importFrom(RSpectra,eigs)
 importFrom(Rcpp,sourceCpp)
