--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -16,5 +16,5 @@ template:
        </script>
 repo:
   url:
-    home: https://enigmasong.github.com/nethist/
+    home: https://github.com/EnigmaSong/nethist/
     issue: https://github.com/EnigmaSong/nethist/issues/
