--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -6,13 +6,13 @@ template:
   includes:
     in_header: |
        <!-- Global site tag (gtag.js) - Google Analytics -->
-       <script async src="https://www.googletagmanager.com/gtag/js?id={G-PLHC8X3G5G}"#' ></script>
+       <script async src="https://www.googletagmanager.com/gtag/js?id=G-PLHC8X3G5G"#' ></script>
        <script>
          window.dataLayer = window.dataLayer || [];
          function gtag(){dataLayer.push(arguments);}
          gtag('js', new Date());
 
-         gtag('config', '{G-PLHC8X3G5G}');
+         gtag('config', 'G-PLHC8X3G5G');
        </script>
 repo:
   url:
