Initial commit for Bin summary plot [#10]

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(nethist,dgCMatrix)
 S3method(nethist,igraph)
 S3method(nethist,matrix)
 S3method(plot,nethist)
+S3method(summary,nethist)
 S3method(violin_netsummary,dgCMatrix)
 S3method(violin_netsummary,igraph)
 S3method(violin_netsummary,matrix)
