3d plot for nethist objects [#24]

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,16 +4,19 @@ S3method(nethist,dgCMatrix)
 S3method(nethist,igraph)
 S3method(nethist,matrix)
 S3method(plot,nethist)
+S3method(plot3d,nethist)
 S3method(summary,nethist)
 S3method(violin_netsummary,dgCMatrix)
 S3method(violin_netsummary,igraph)
 S3method(violin_netsummary,matrix)
 export(.prob_mat_from_adj)
 export(nethist)
+export(plot3d)
 export(violin_netsummary)
 importFrom(RSpectra,eigs)
 importFrom(Rcpp,sourceCpp)
 importFrom(graphics,par)
+importFrom(plot3D,hist3D)
 importFrom(stats,.lm.fit)
 importFrom(stats,dist)
 importFrom(stats,heatmap)
