--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: nethist
 Type: Package
 Title: Network histogram 
-Version: 0.2.3
+Version: 0.3.0
 Date: 2023-03-15
 Authors@R: c(person("Youngseok","Song", email="youngseok.song@epfl.ch", role =c("aut", "cre")), 
             person("Sofia C.","Olhede", email = "sofia.olhede@epfl.ch", role = "aut"))
@@ -9,7 +9,8 @@ Maintainer: Youngseok Song <youngseok.song@epfl.ch>
 Description: R package for network histogram estimation and additional tools. To install the package from source, you need C++ and Fortran (due to RSpectra) compilers. We suggest you to use undirected and simple graphs (either igraph or matrix) as inputs for the functions in this package.
 Suggests: 
     testthat (>= 3.0.0),
-    tinytest
+    tinytest,
+    igraphdata
 Encoding: UTF-8
 RoxygenNote: 7.2.3
 Imports: 
@@ -19,6 +20,7 @@ Imports:
     RSpectra,
     ggplot2,
     ggtext,
+    png,
     reshape2,
     igraph
 LinkingTo: Rcpp, RcppArmadillo
