- bug fix in plot() - rename summary() to summary_plot() - change possible argument in plot() : type can be  c("nethist", "prob") instead of c("nethist", "pmat")

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,17 +5,21 @@ S3method(nethist,igraph)
 S3method(nethist,matrix)
 S3method(plot,nethist)
 S3method(plot3d,nethist)
-S3method(summary,nethist)
+S3method(summary_plot,nethist)
 S3method(violin_netsummary,dgCMatrix)
 S3method(violin_netsummary,igraph)
 S3method(violin_netsummary,matrix)
 export(.prob_mat_from_adj)
 export(nethist)
 export(plot3d)
+export(summary_plot)
 export(violin_netsummary)
+import(png)
 importFrom(RSpectra,eigs)
 importFrom(Rcpp,sourceCpp)
+importFrom(ggtext,element_markdown)
 importFrom(graphics,par)
+importFrom(graphics,text)
 importFrom(plot3D,hist3D)
 importFrom(stats,.lm.fit)
 importFrom(stats,dist)
