--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: nethist
 Type: Package
 Title: Network histogram 
-Version: 0.3.0
-Date: 2023-03-15
+Version: 0.2.4
+Date: 2023-04-04
 Authors@R: c(person("Youngseok","Song", email="youngseok.song@epfl.ch", role =c("aut", "cre")), 
             person("Sofia C.","Olhede", email = "sofia.olhede@epfl.ch", role = "aut"))
 Maintainer: Youngseok Song <youngseok.song@epfl.ch>
@@ -22,7 +22,8 @@ Imports:
     ggtext,
     png,
     reshape2,
-    igraph
+    igraph,
+    plot3D
 LinkingTo: Rcpp, RcppArmadillo
 Depends: 
     R (>= 2.10)
