--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,8 +22,7 @@ Imports:
     ggtext,
     png,
     reshape2,
-    igraph,
-    plot3D
+    igraph
 LinkingTo: Rcpp, RcppArmadillo
 Depends: 
     R (>= 2.10)
